# inventory-order-management-system

./: .gitignore  README.md  docker-compose.yml  setup.sh
.github/workflows/: keep-warm.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_soft_delete.py
backend/scripts/: entrypoint.sh  seed.py
backend/src/: main.py
backend/src/api/: dependencies.py  router.py
backend/src/api/controllers/: customers.py  dashboard.py  orders.py  products.py
backend/src/core/: config.py  logging.py
backend/src/db/: base.py  session.py
backend/src/exceptions/: __init__.py  domain.py
backend/src/middlewares/: __init__.py  exception_handler.py  request_context.py  security_headers.py
backend/src/models/: __init__.py  customer.py  order.py  order_item.py  product.py
backend/src/repositories/: base.py  customer.py  order.py  product.py
backend/src/schemas/: common.py  customer.py  dashboard.py  order.py  product.py
backend/src/services/: customer.py  dashboard.py  order.py  product.py
backend/src/utils/: pagination.py
backend/tests/: conftest.py
backend/tests/unit/: test_customer_service.py  test_dashboard_service.py  test_order_service.py  test_product_service.py  test_soft_delete.py
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md
frontend/: .env.example  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vercel.json  vite.config.ts  vitest.config.ts
frontend/coverage/: index.html
frontend/src/: App.tsx  main.tsx
(+96 files in other folders)
